--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,25 @@
-body {
-    background-color: blue;
-  }
+
+.quad {
+  width: 50vw;
+  height: 50vh;
+}
+
+#eat {
+  background-color: rgb(189, 148, 148);
+  float: right;
+}
+
+#play {
+  background-color: rgb(133, 10, 10);
+  float: left;
+}
+
+#fight {
+  background-color: rgb(10, 98, 133);
+  float: left;
+}
+
+#sleep {
+  background-color: rgb(10, 39, 133);
+  float: right;
+}
